# tsk

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  example.py  example_1.py  example_3.py  example_4.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  taskfile_2.py  taskfile_3.py  tsconfig.json  tskfile.py  vite.config.js
api/: index.html
docs/: CNAME  api.md  example_1.py  example_2.py  example_4.py  index.html  index.md  tutorials.md
docs/assets/: index-B-o9N7tx.js  index-Ce-l5ARZ.css  index-bC4H4kx9.css
search/: search_index.json
src/: index.css  main.ts
tsk/: __init__.py  tsk.py  tsks.py  util.py
tsk_monster/: __init__.py  tsk.py  tsks.py  util.py
tst/: test_jobs.py
tutorials/: index.html
